# midheaven

./: .gitignore  Cargo.toml  LICENSE  PRODUCT.md  README.md  THIRD-PARTY-LICENSES.html  about.toml  build.rs  reading.html
.github/workflows/: ci.yml  pages.yml  release.yml
desktop/: package-lock.json  package.json
desktop/src/: app.html
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  prefs.rs  record.rs
desktop/src/lib/: api.ts  motion.ts  state.svelte.ts  theme.css  types.ts
desktop/src/lib/components/: BirthForm.svelte  ChartCore.svelte  Commentary.svelte  IndexOfElements.svelte  Library.svelte  Preferences.svelte  Toaster.svelte  Wheel.svelte  WheelMark.svelte
desktop/src/routes/: +layout.svelte  +page.svelte
docs/: natal-reading-indexer.md
examples/: transcript.jsonl
site/: index.html
src/: contract.rs  emit.rs  geo.rs  lib.rs  main.rs  transcribe.rs
src/chart/: catalog.rs  mod.rs  systems.rs
src/i18n/: en.rs  mod.rs  ru.rs
src/pdf/: flow.rs  fonts.rs  mod.rs  palette.rs  primitives.rs  text.rs  wheel.rs
src/route/: coalesce.rs  lexicon.rs  mod.rs  transcript.rs  verify.rs
src/tui/: mod.rs  model.rs  theme.rs  update.rs  view.rs  wheel.rs
templates/: reading.html
tests/: pipeline.rs
