[workspace]
members = [".", "desktop/src-tauri"]

[package]
name = "astro"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.2", features = ["derive"] }
flate2 = "1.1.9"
hound = "3.5.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
# whisper.cpp uses std::filesystem → macOS deployment target must be ≥ 10.15
# (see desktop/src-tauri/tauri.conf.json bundle.macOS.minimumSystemVersion)
whisper-rs = "0.16.0"
xalen-coords = "0.6.0"
xalen-ephem = "0.6.0"
xalen-houses = "0.6.0"
xalen-time = "0.6.0"

[build-dependencies]
flate2 = "1.1.9"
ureq = "3.3.0"
zip = "8.6.0"
