[workspace]
members = [".", "desktop/src-tauri"]

[package]
name = "astro"
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.2", features = ["derive"] }
flate2 = "1.1.9"
# hound (WAV I/O) is only used by the transcription stage.
hound = { version = "3.5.1", optional = true }
krilla = { version = "0.8", default-features = false, features = ["pdf", "simple-text", "raster-images"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
ttf-parser = "0.25.1"
# whisper.cpp uses std::filesystem → macOS deployment target must be ≥ 10.15
# (see desktop/src-tauri/tauri.conf.json bundle.macOS.minimumSystemVersion).
# Optional so mobile targets (Android/iOS) can build without a C++ toolchain
# or on-device model inference — see the `transcribe` feature below.
whisper-rs = { version = "0.16.0", optional = true }
xalen-coords = "0.6.0"
xalen-ephem = "0.6.0"
xalen-houses = "0.6.0"
xalen-time = "0.6.0"

[features]
# On-device speech-to-text (whisper.cpp via whisper-rs + WAV decoding via hound).
# Default on for the CLI and desktop app; turned off for mobile builds, where
# cross-compiling whisper.cpp and shipping multi-hundred-MB models is deferred.
default = ["transcribe"]
transcribe = ["dep:whisper-rs", "dep:hound"]

# The CLI drives transcription directly, so it only builds with the feature on
# (mobile builds pull in the library, never this binary).
[[bin]]
name = "astro"
path = "src/main.rs"
required-features = ["transcribe"]

[build-dependencies]
flate2 = "1.1.9"
ureq = "3.3.0"
zip = "8.6.0"
