[workspace]
members = [".", "desktop/src-tauri"]

[package]
name = "astro"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.2", features = ["derive"] }
flate2 = "1.1.9"
# hound (WAV I/O) is only used by the transcription stage.
hound = { version = "3.5.1", optional = true }
krilla = { version = "0.8", default-features = false, features = ["pdf", "simple-text", "raster-images"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
# TypeScript bindings for the desktop webview, derived from the `contract`
# types. Optional and off by default so no production target (CLI, desktop,
# mobile) pulls in the proc-macro; the bindings are generated under the `ts`
# feature — run `npm run gen:types` (desktop/), enforced by the CI drift check.
ts-rs = { version = "12", optional = true }
ttf-parser = "0.25.1"
# whisper.cpp uses std::filesystem → macOS deployment target must be ≥ 10.15
# (see desktop/src-tauri/tauri.conf.json bundle.macOS.minimumSystemVersion).
# Optional so mobile targets (Android/iOS) can build without a C++ toolchain
# or on-device model inference — see the `transcribe` feature below.
whisper-rs = { version = "0.16.0", optional = true }
xalen-ayanamsa = "0.6.0"
xalen-coords = "0.6.0"
xalen-ephem = "0.6.0"
xalen-houses = "0.6.0"
xalen-time = "0.6.0"

[features]
# On-device speech-to-text (whisper.cpp via whisper-rs + WAV decoding via hound).
# Default on for the CLI and desktop app; turned off for mobile builds, where
# cross-compiling whisper.cpp and shipping multi-hundred-MB models is deferred.
default = ["transcribe"]
transcribe = ["dep:whisper-rs", "dep:hound"]
# Emit TypeScript bindings from the contract types when running the tests.
ts = ["dep:ts-rs"]

# The CLI drives transcription directly, so it only builds with the feature on
# (mobile builds pull in the library, never this binary).
[[bin]]
name = "astro"
path = "src/main.rs"
required-features = ["transcribe"]

[build-dependencies]
flate2 = "1.1.9"
ureq = "3.3.0"
zip = "8.6.0"
