[package]
name = "astro-desktop"
version = "0.3.1"
description = "An offline astrology workspace — desktop app"
authors = ["Alexander Charette"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "astro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Mobile (Android/iOS) builds omit on-device transcription: no whisper.cpp
# C++ toolchain, no ggml models. Desktop re-enables it in the target table below.
astro = { path = "../..", default-features = false }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"

# Desktop-only: microphone capture (cpal) + WAV writing (hound), and the
# transcription feature of the core crate. `cfg(desktop)` isn't known to Cargo
# at resolution time, so key off the target OS instead — mobile is android/ios.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
astro = { path = "../..", default-features = false, features = ["transcribe"] }
cpal = "0.18.1"
hound = "3.5.1"

[dev-dependencies]
chrono-tz = "0.10.4"

